# degiro-portfolio-rebalancer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  degiro_portfolio_rebalancer.py  pyproject.toml
config/: config_template.json
tests/: test_degiro_portfolio_rebalancer.py
